<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SecondFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/name"
        android:textColorHint="@color/secondaryTextColor"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/input_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            tools:text="productName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productQuantityLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/quantity"
        android:textColorHint="@color/secondaryTextColor"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/input_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            tools:text="1.0" />

    </com.google.android.material.textfield.TextInputLayout>

   <CheckBox
       android:id="@+id/productMarked"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/marked"
       android:textSize="16sp"
       android:textColor="@color/primaryTextColor"
       android:layout_marginHorizontal="12dp"
       android:layout_marginVertical="12dp"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintTop_toBottomOf="@id/productQuantityLayout"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="56dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:paddingTop="10dp"
        android:drawableTop="@drawable/ic_baseline_delete_outline_32"
        android:textColor="@color/white"
        android:visibility="gone"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:padding="16dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>